--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,15 @@
+@import './styles/mixins';
+
 .App {
   height: 100vh;
+  width: 100vw;
   border: 2px solid red;
+
+  &__nav {
+    @include flexbox;
+    border: 2px solid orchid;
+    height: 6rem;
+    background: #000;
+    width: 100%;
+  }
 }
