--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -4,3 +4,10 @@
   justify-content: $jc;
   align-items: $ai;
 }
+
+@mixin buttonStyles($bgColor: red) {
+  background-color: $bgColor;
+  width: 100%;
+  border-radius: 3px;
+  border: 2px solid red;
+}
