--- a/src/App.scss
+++ b/src/App.scss
@@ -6,10 +6,25 @@
   border: 2px solid red;
 
   &__nav {
-    @include flexbox;
+    @include flexbox($jc: space-between, $ai: center);
     border: 2px solid orchid;
     height: 6rem;
     background: #000;
     width: 100%;
+  }
+
+  &__logo {
+    color: #fff;
+    font-size: 1.6rem;
+  }
+
+  &__signOutIcon {
+    color: #fff;
+    margin-right: .5rem;
+  }
+
+  &__backIcon {
+    color: #fff;
+    margin-left: .5rem;
   }
 }
