--- a/src/App.scss
+++ b/src/App.scss
@@ -4,11 +4,11 @@
 .App {
   height: 100vh;
   width: 100vw;
-  border: 2px solid red;
+  background: #322f30;
+
 
   &__nav {
     @include flexbox($jc: space-between, $ai: center);
-    border: 2px solid orchid;
     height: 6rem;
     background: #000;
     width: 100%;
